--- a/mybuild/issues/templates/issues/remark_detail.html
+++ b/mybuild/issues/templates/issues/remark_detail.html
@@ -138,7 +138,7 @@
                 {% endif %}
               {% endif %}
               
-              {% if is_inspector or is_foreman %}
+              {% if is_inspector or is_client %}
                 {% if remark.status == 'PENDING_CONFIRMATION' %}
                   <form method="post" action="{% url 'issues:confirm_closure' remark.id %}">
                     {% csrf_token %}
